# agentic-saas-starter

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATIONS.md  README.md  SECURITY.md  compose.yaml  docker_start.sh  pyproject.toml
.github/workflows/: frontend-build.yml  python-test.yml
agent_platform/: __init__.py  __main__.py  auth.py  config.py  scaffold.py
agent_platform/agents/: __init__.py  registry.py
agent_platform/agents/echo_agent/: __init__.py  description.yaml  graph.py  nodes.py
agent_platform/agents/support_agent/: __init__.py  description.yaml  graph.py  nodes.py
agent_platform/agents/task_agent/: __init__.py  branch.py  description.yaml  graph.py  nodes.py  prompts.py  test_context.py
agent_platform/api/: app.py  dependencies.py  schemas.py  streaming.py
agent_platform/api/routes/: agents.py  auth.py  chat.py  feedback.py  generate.py  playground.py  regression.py  runs.py  sessions.py  tools.py
agent_platform/db/: __init__.py  checkpointer.py  engine.py  models.py
agent_platform/graph/: __init__.py  builder.py  state.py
agent_platform/knowledge/: agents.md  architecture.md  evals-and-observability.md  tools.md
agent_platform/llm/: __init__.py  client.py
agent_platform/observability/: __init__.py  callback.py
agent_platform/regression/: __init__.py  contexts.py  differ.py  executor.py  judge.py  schemas.py
agent_platform/services/: __init__.py  saas_api_client.py
agent_platform/tools/: __init__.py  executor.py  matching.py  registry.py
agent_platform/utils/: progress.py
docs/: architecture.md  how-to-add-a-tool.md  how-to-add-an-agent.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/scripts/: screenshots.mjs
frontend/src/: App.tsx  index.css  main.tsx  utils.ts
frontend/src/api/: client.ts  sse.ts  (+2 more)
tests/: __init__.py  conftest.py  fixtures.py
tests/unit/: test_registries.py  test_scaffold.py
(+69 files in other folders)
