[project]
name = "agentic-saas-starter"
version = "0.1.0"
description = "Reference architecture for adding an agentic layer to an existing SaaS (LangGraph + FastAPI + React)"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.48",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",

    "pydantic-settings>=2.13.1",
    "langchain-core>=1.2.21",
    "langchain-openai>=1.1.10",
    "langchain-anthropic>=1.4.0",
    "python-dotenv>=1.0.1",

    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=2.0.0",
    "PyYAML>=6.0.2",
    "tenacity>=9.0.0",
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.42.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.15.7",
    "mypy>=1.14",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md"]

[tool.setuptools.packages.find]
include = ["agent_platform*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends() idiom. E402: app.py registers routers after app
# creation. E501: long lines are prompt text and URLs. B905/SIM1xx: pre-existing
# style, left as-is to keep the diff reviewable.
ignore = ["B008", "E402", "E501", "B905", "SIM103", "SIM105", "SIM108", "SIM118"]

[tool.ruff.lint.per-file-ignores]
# Importing fixtures into test modules re-triggers F811/F401 by design.
"tests/**" = ["F811", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov-branch",
    "--cov=agent_platform",
    "--import-mode=importlib",
]
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
